# dt-kv260

./: .gitignore  .gitmodules  README.md  catkin_make.sh  docker_join.sh  docker_run.sh  environment.sh  init.sh  install.sh  ros1_environment.sh  ros2_environment.sh  start_bot.sh
Arduino/kv260_motor_control/: kv260_motor_control.ino
Arduino/l298n/: l298n.ino
Docker/: Dockerfile  build.sh  docker_join.sh  docker_run.sh
catkin_ws/src/bot_base/: CMakeLists.txt  package.xml
catkin_ws/src/bot_base/launch/: base.launch  bot_description.launch
catkin_ws/src/bot_base/src/: bot_base.py
catkin_ws/src/bot_base/urdf/: bot.urdf
catkin_ws/src/dt_kv260_one_node/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dt_kv260_one_node/launch/: obs_avoid_one_node.launch
catkin_ws/src/dt_kv260_one_node/src/: dt_kv260_one_node.cpp  dt_kv260_one_node.h
catkin_ws/src/lane_following/: CMakeLists.txt  package.xml
catkin_ws/src/lane_following/launch/: lane_following.launch
catkin_ws/src/lane_following/src/: lane_following.py
catkin_ws/src/lane_following/weights/: download_weights.sh
catkin_ws/src/obstacle_avoidance/: CMakeLists.txt  package.xml
catkin_ws/src/obstacle_avoidance/launch/: obstacle_avoidance.launch
catkin_ws/src/obstacle_avoidance/src/: obs.cpp  pc_transform.cpp
catkin_ws/src/pointcloud_to_laserscan/launch/: anchor_local_map.launch  pcl2laser.launch  virtual_husky.launch
catkin_ws/src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
catkin_ws/src/sensors/realsense-ros-2.2.15/realsense2_camera/launch/: rs_aligned_depth.launch
data/config/: robot_configuration
data/proc/: buddyinfo  slabinfo  vmallocinfo
data/stats/events/: 1642758668686544770.json  1642758729554072384.json  1642759499560508087.json  1643180056316496245.json
data/stats/usage/init_sd_card/: 1642758668734650615.json
installation/: install.sh
installation/data/autoboot/: duckiebot.yaml  duckiedrone.yaml  traffic_light.yaml
installation/data/proc/: meminfo  pagetypeinfo  zoneinfo
installation/data/stats/MAC/: eth0  wlan0
installation/data/stats/events/: 1643178872881918684.json  1643184506856033941.json  1643186653511423740.json  1644485128254343478.json  1644486641615802280.json
installation/data/stats/usage/disk_image/: 1642758668717236099.json
installation/secrets/tokens/: dt1
installation/services/: dt.robot_configuration.service  dt.robot_type.service
overlays/dpu_uartlite/: dpu_uartlite.hwh
procman/: start_bot
rviz/: rviz.rviz
test/: nano_picamera.md
tutorials/: 00-git-sshkey.md  00-kv-install.md  00-kv260-install.md  01-python-ide.md  02-kv-ros2.md  02-ros2-docker.md  03-dt-docker.md  04-dt-dts.md  05-dt-DB21-note.md  06-dt-duckietown-devices.md  07-dt-sensors.md  08-pynq-uart-motor-control.ipynb  09-HIL-lane-following.md
