<?xml version="1.0"?>
<package>
  <name>bot_base</name>
  <version>0.0.1</version>
  <description>dt-kv260</description>

  <author email="yellow.gdr09g@nctu.edu.tw">Yellow</author>
  <maintainer email="yellow.gdr09g@nctu.edu.tw">Yellow</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>

  <export>
  </export>
</package>
